CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(MongoTest)

list(APPEND CMAKE_MODULE_PATH ${MongoTest_SOURCE_DIR} ${MongoTest_SOURCE_DIR}/cmake)

set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall")

FIND_PACKAGE(Boost 1.54 COMPONENTS system regex thread filesystem program_options REQUIRED )
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
FIND_PACKAGE(Threads REQUIRED)
INCLUDE_DIRECTORIES( ${Threads_INCLUDE_DIR})
FIND_PACKAGE(JSONBOX REQUIRED)
INCLUDE_DIRECTORIES( ${JSONBOX_INCLUDE_DIRS})
FIND_PACKAGE(MongoDB REQUIRED)
INCLUDE_DIRECTORIES( ${MongoDB_INCLUDE_DIR})
FIND_PACKAGE(MongoInterface REQUIRED)
INCLUDE_DIRECTORIES( ${MongoInterface_INCLUDE_DIR})

add_executable(MongoTest MongoInterface_test.cpp)
TARGET_LINK_LIBRARIES(MongoTest ${MongoInterface_LIBRARY} ${JSONBOX_LIBRARY_RELEASE} ${MongoDB_LIBRARIES} ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})

